--- a/_config.yml
+++ b/_config.yml
@@ -28,6 +28,11 @@ theme: jekyll-theme-hydeout
 plugins:
   - jekyll-feed
 
+# Sass settings
+sass:
+  sass_dir: _sass
+  style: compressed
+
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
