Added remote theme setting for github pages

--- a/_config.yml
+++ b/_config.yml
@@ -25,6 +25,7 @@ github_username:  scottpenn
 # Build settings
 markdown: kramdown
 theme: jekyll-theme-hydeout
+remote_theme: fongandrew/hydeout
 plugins:
   - jekyll-feed
 
